// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox/presenters/CheckPresenter renders with all props 1`] = `
.emotion-3 {
  display: none;
}

.emotion-0 {
  fill: #808080;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  color: transparent;
  border: 1px solid rgba(128,128,128,0.5);
  background-color: #808080;
  text-align: center;
  font-size: 25px;
  line-height: 14px;
  height: 16px;
  width: 16px;
  border-radius: 0;
  cursor: default;
  opacity: 0.4;
  box-shadow: none;
  pointer-events: none;
}

.emotion-4 svg {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  pointer-events: none;
}

.emotion-4 svg * {
  fill: #ffffff;
}

.emotion-1 {
  display: block;
}

<span
  className="emotion-4"
>
  <span
    className="emotion-1"
  >
    <svg
      className="emotion-0"
      height="16px"
      viewBox="0 0 16 16"
      width="16px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        checkbox-checked-16
      </title>
      <path
        d="M3.55 8.45l1.12-1.16L6.7 9.23l4.6-4.74 1.15 1.14-5.73 5.88-3.17-3.06z"
      />
    </svg>
  </span>
  <span
    className="emotion-3"
  >
    <svg
      className="emotion-0"
      height="2px"
      viewBox="0 0 8 2"
      width="8px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Rectangle 11
      </title>
      <path
        d="M0 0h8v2H0z"
        fill="#FFF"
        fillRule="evenodd"
      />
    </svg>
  </span>
</span>
`;

exports[`checkbox/presenters/CheckPresenter renders without props 1`] = `
.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  color: transparent;
  border: 1px solid rgba(128,128,128,0.5);
  background-color: transparent;
  text-align: center;
  font-size: 25px;
  line-height: 14px;
  height: 16px;
  width: 16px;
  border-radius: 0;
  cursor: default;
}

.emotion-4 svg {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  pointer-events: none;
}

.emotion-4 svg * {
  fill: #ffffff;
}

.emotion-1 {
  display: none;
}

.emotion-0 {
  fill: #808080;
}

.emotion-0 > * {
  fill: #808080;
}

<span
  className="emotion-4"
>
  <span
    className="emotion-1"
  >
    <svg
      className="emotion-0"
      height="16px"
      viewBox="0 0 16 16"
      width="16px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        checkbox-checked-16
      </title>
      <path
        d="M3.55 8.45l1.12-1.16L6.7 9.23l4.6-4.74 1.15 1.14-5.73 5.88-3.17-3.06z"
      />
    </svg>
  </span>
  <span
    className="emotion-1"
  >
    <svg
      className="emotion-0"
      height="2px"
      viewBox="0 0 8 2"
      width="8px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Rectangle 11
      </title>
      <path
        d="M0 0h8v2H0z"
        fill="#FFF"
        fillRule="evenodd"
      />
    </svg>
  </span>
</span>
`;
